gcc/testsuite/rust/rustc/ui/typeck/issue-98260.rs
fn main() {}
trait A {
    fn a(aa: B) -> Result<_, B> {
// { dg-error ".E0121." "" { target *-*-* } .-1 }
        Ok(())
    }
}

enum B {}

